[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/command.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/remove.svg" type="Texture" id=2]
[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=3]

[node name="command" type="Panel"]
margin_right = 792.0
margin_bottom = 40.0
rect_min_size = Vector2( 700, 40 )
size_flags_horizontal = 3
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enabled" type="CheckBox" parent="container"]
margin_right = 24.0
margin_bottom = 30.0
pressed = true

[node name="command_content" type="LineEdit" parent="container"]
margin_left = 28.0
margin_right = 178.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
placeholder_text = "!command"

[node name="access" type="OptionButton" parent="container"]
margin_left = 182.0
margin_right = 282.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "all"
items = [ "all", null, false, 0, null, "admin", null, false, 1, null, "streamer", null, false, 2, null ]
selected = 0

[node name="type" type="OptionButton" parent="container"]
margin_left = 286.0
margin_right = 386.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "static"
items = [ "static", null, false, 0, null, "code", null, false, 1, null ]
selected = 0

[node name="response_content" type="LineEdit" parent="container"]
margin_left = 390.0
margin_right = 762.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
size_flags_horizontal = 3
placeholder_text = "response"

[node name="code" type="Button" parent="container"]
visible = false
margin_left = 588.0
margin_right = 782.0
margin_bottom = 30.0
size_flags_horizontal = 3
text = "code"

[node name="delete" type="TextureButton" parent="container"]
margin_left = 766.0
margin_top = 7.0
margin_right = 782.0
margin_bottom = 23.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )

[node name="code_popup" type="PopupDialog" parent="."]
margin_right = 515.0
margin_bottom = 302.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="code_content" type="TextEdit" parent="code_popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
syntax_highlighting = true
__meta__ = {
"_edit_use_anchors_": false
}
